# mcp-explore

./: pyproject.toml
expense-tracker-mcp-server/: .dockerignore  Dockerfile  README.md  categories.json  expenses.db  main.py
mcp-client/: .example.env  README.md  airthmetic_mcp_server.py  client_v1.py  client_v2.py  pyproject.toml
proxy-server/: main.py  pyproject.toml
simple-mcp-server/: README.md  main.py  pyproject.toml
simple-mcp-server/data/: expenses.db-journal
